[gd_scene load_steps=5 format=2]

[ext_resource path="res://Platform/Theme/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Platform/Scene/UI/PauseMenu.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.607843 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 318.0
margin_top = 224.0
margin_right = 402.0
margin_bottom = 316.0
theme = ExtResource( 1 )

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 31.0
text = "继续"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 84.0
margin_bottom = 92.0
text = "退出"

[node name="Transitions" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/show = SubResource( 2 )

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
